--- a/CSS/main.css
+++ b/CSS/main.css
@@ -21,6 +21,7 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 ul {
@@ -221,8 +222,8 @@ header .container nav .form i {
 /* Start Landing */
 .landing {
   background-color: #1f2021;
-  background-image: url("../Image/landing-1.jpg");
-  background-size: cover;
+  /* background-image: url("../Image/landing-1.jpg"); */
+  /* background-size: cover; */
   height: 100vh;
   position: relative;
 }
@@ -231,7 +232,41 @@ header .container nav .form i {
   background-color: var(--overlay-background);
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+}
+
+.landing #img {
+  position: relative;
+}
+.landing #img img {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  /* animation: zoom 6s ease-in-out; */
+}
+.landing #img img.scale {
+  animation: zoom 4s ease-in-out;
+}
+
+@keyframes zoom {
+  0%
+  {
+    transform: scale(1.3);
+  }
+  25% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .landing .text {
@@ -271,7 +306,6 @@ header .container nav .form i {
   color: white;
   font-size: 35px;
 }
-
 
 @media (max-width: 767px) {
   .landing .text {
