--- a/CSS/main.css
+++ b/CSS/main.css
@@ -241,11 +241,14 @@ header .container nav .form i {
 .landing #img img {
   width: 100%;
   height: 100vh;
+  object-fit: cover;
+  object-position: center;
   position: absolute;
   left: 0;
   top: 0;
   /* animation: zoom 6s ease-in-out; */
 }
+
 .landing #img img.scale {
   animation: zoom 4s ease-in-out;
 }
@@ -278,7 +281,10 @@ header .container nav .form i {
   top: 50%;
   transform: translateY(-50%);
   color: white;
-  padding: 20px;
+  padding: 20px; 
+}
+.landing .text::-webkit-scrollbar {
+  display: none;
 }
 
 @media (max-width: 767px) {
